Cleanup terrascript errors

--- a/features/aether/buildings/ruins/ancient-aether/ancient_aether_towers.yml
+++ b/features/aether/buildings/ruins/ancient-aether/ancient_aether_towers.yml
@@ -9,7 +9,7 @@ distributor:
 
 locator:
   type: RANDOM
-  height: &range
+  height:
     min: $customization.yml:ancient-aether-base
     max: ${customization.yml:ancient-aether-base} + 1
   amount: 1
