--- a/features/aether/sky/cloud_layer.yml
+++ b/features/aether/sky/cloud_layer.yml
@@ -26,7 +26,7 @@ locator:
   type: AND
   locators:
     - type: PATTERN
-      range: &range
+      range:
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
       pattern:
