--- a/features/end/dragon_island/sky/endstone_ring.yml
+++ b/features/end/dragon_island/sky/endstone_ring.yml
@@ -49,7 +49,7 @@ locator:
   type: AND
   locators:
     - type: PATTERN
-      range: &range
+      range:
         min: $meta.yml:bottom-y
         max: $meta.yml:top-y
       pattern:
