Add particles to nebula

--- a/biomes/void/nebula.yml
+++ b/biomes/void/nebula.yml
@@ -5,6 +5,10 @@ extends:
 vanilla: minecraft:the_void
 color: $biomes/colors.yml:NEBULA
 
+particles:
+  particle: minecraft:end_rod
+  probability: 0.0005
+
 features:
   preprocessors:
     - STAR_TRAILS
