--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -29,6 +29,7 @@ VERMILION_WILDS: 0xb33c35
 
 # Void Biomes
 VOID: 0x171717
+AETHER_VOID: 0x292929
 STARFIELD: 0xff33cc
 ASTEROID_FIELD: 0x3c2e40
 NEBULA: 0x855980
