--- a/biomes/void/void.yml
+++ b/biomes/void/void.yml
@@ -5,6 +5,9 @@ extends:
 vanilla: minecraft:the_void
 color: $biomes/colors.yml:VOID
 
+tags:
+  - VOID
+
 palette:
   - BLOCK:minecraft:end_stone: $meta.yml:top-y
 
