--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -6,6 +6,7 @@ DRAGON_ISLAND_VOID: 0x141414
 
 # End Biomes
 END_HIGHLANDS: 0xe8e8cf
+HANGING_ISLES: 0xa6a697
 
 SHATTERED_END: 0x180b24
 SHATTERED_FOREST: 0x2f1645
