Add desolate biome variants to control end city gen

--- a/biome-distribution/presets/alternative/betterend.yml
+++ b/biome-distribution/presets/alternative/betterend.yml
@@ -19,6 +19,8 @@ biomes:
   type: EXTRUSION
   extrusions:
     - << biome-distribution/extrusions/add_starfield.yml:extrusions
+    - << biome-distribution/stages/desolate_distribution.yml:stages
+
   provider:
     type: PIPELINE
     resolution: 4
