--- a/biome-distribution/presets/alternative/normal.yml
+++ b/biome-distribution/presets/alternative/normal.yml
@@ -41,6 +41,7 @@ biomes:
         - << biome-distribution/stages/rings_of_life.yml:stages
         - << biome-distribution/stages/alternative/normal_distribution.yml:stages
         - << biome-distribution/stages/outer_end_distribution.yml:stages
+        - << biome-distribution/stages/desolate_distribution.yml:stages
 
         - type: FRACTAL_EXPAND
           sampler:
