--- a/biomes/end/desolate/rosette_pools_desolate.yml
+++ b/biomes/end/desolate/rosette_pools_desolate.yml
@@ -1,9 +1,9 @@
-id: ROSETTE_POOLS
+id: ROSETTE_POOLS_DESOLATE
 type: BIOME
 extends:
   - BASE_END
   - EQ_OVERHANGS
-vanilla: minecraft:end_highlands
+vanilla: minecraft:end_barrens
 color: $biomes/colors.yml:ROSETTE_POOLS
 
 tags:
