Change aether azure meadow flowers

--- a/features/aether/vegetation/flowers/mixed_flower_cover.yml
+++ b/features/aether/vegetation/flowers/mixed_flower_cover.yml
@@ -38,27 +38,11 @@ locator:
 
 structures:
   distribution:
-    type: DOMAIN_WARP
-    amplitude: 4
-    warp:
-      type: GAUSSIAN
-    sampler:
-      type: CELLULAR
-      return: CellValue
-      frequency: 0.06
-      seed: 9231
+    type: WHITE_NOISE
   structures:
-    - BLOCK:minecraft:blue_orchid: 3
-    - BLOCK:minecraft:cornflower: 3
-    - BLOCK:minecraft:allium: 3
-    - BLOCK:minecraft:red_tulip: 3
-    - BLOCK:minecraft:orange_tulip: 3
-    - lilac: 1
-    - peony: 1
-    - rose_bush: 1
-    - BLOCK:minecraft:dandelion: 3
-    - BLOCK:minecraft:oxeye_daisy: 3
+    - BLOCK:minecraft:blue_orchid: 1
+    - blank: 4
     - BLOCK:minecraft:azure_bluet: 1
+    - blank: 4
     - BLOCK:minecraft:lily_of_the_valley: 1
-    - BLOCK:minecraft:white_tulip: 1
-    - BLOCK:minecraft:pink_tulip: 1
+    - blank: 4
