Add new aether biomes

--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -39,12 +39,20 @@ VOID_SEA_BORDER: 0x111414
 AURORA: 0xff78c4
 WEBBED_VOID: 0x3b3535
 
+# Aether Biomes
+AETHER_AZURE_MEADOWS: 0x3c79cf
+AETHER_CLARET_GROVE: 0xc24f92
+AETHER_WISPY_ISLES: 0x709fe0
+
+
+# OLD \/
+
 # aether coasts
 AETHER_INSIPID_COASTS: 0xa3a29e
 AETHER_MARBLE_COASTS: 0xe3e0cd
 
 # aether lowlands
-AETHER_AZURE_MEADOWS: 0x3c79cf
+
 AETHER_TENEBROUS_THICKET: 0x292825
 AETHER_DRIFTFALLS: 0xa6dde0
 AETHER_CRIMSIC_LANDSCAPES: 0xDC143C
