--- a/biome-distribution/stages/aether_distribution.yml
+++ b/biome-distribution/stages/aether_distribution.yml
@@ -5,7 +5,10 @@ stages:
       expression: spotSizePercent(x, z)*2-1
     from: aether-spot
     to: &biome-list
-      AETHER_AZURE_MEADOWS: 1
+      - AETHER_AZURE_MEADOWS: 1
+      - AETHER_CLARET_GROVE: 1
+      - AETHER_WISPY_ISLES: 1
+      - AETHER_BRAMBLE_WILDS: 1
 
   - type: REPLACE
     sampler:
