--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,7 +21,7 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: validate
-    if: github.repository == 'PolyhedralDev/TerraOverworldConfig' && github.event_name == 'push'
+    if: github.repository == 'PolyhedralDev/ReimagEND' && github.event_name == 'push'
 
     env:
       repo_url: ${{ github.server_url }}/${{ github.repository }}
