Solve biome color validation

--- a/biomes/aether/alternative/betterend/aether_highlands_forest.yml
+++ b/biomes/aether/alternative/betterend/aether_highlands_forest.yml
@@ -1,7 +1,7 @@
 id: AETHER_HIGHLANDS_FOREST
 type: BIOME
 extends: [ AETHER_HIGHLANDS ]
-color: $biomes/colors.yml:AETHER_HIGHLANDS
+color: $biomes/colors.yml:AETHER_HIGHLANDS_FOREST
 vanilla: minecraft:the_end
 
 features:
