--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -7,20 +7,16 @@ DRAGON_ISLAND_VOID: 0x141414
 # End Biomes
 END_HIGHLANDS: 0xe8e8cf
 HANGING_ISLES: 0xa6a697
-
 SHATTERED_END: 0x180b24
 SHATTERED_FOREST: 0x2f1645
-
 DARK_END: 0x1f1f14
 AMETHYST_END: 0x9966cc
 TAINTED_END: 0x7d08c8
 STYGIAN_BARRENS: 0x252130
-
 CRAGGY_END: 0x929c97
 CHORUVE_WOODS: 0x7f549c
 CHORAL_DEADLANDS: 0x808080
 IVORY_EMPYREAN: 0xffffff
-
 ROSETTE_POOLS: 0xd3658e
 MAUVE_JUNGLE: 0xa92feb
 TWISTED_GROVE: 0x00aba6
@@ -43,6 +39,26 @@ WEBBED_VOID: 0x3b3535
 AETHER_AZURE_MEADOWS: 0x3c79cf
 AETHER_CLARET_GROVE: 0xc24f92
 AETHER_WISPY_ISLES: 0x709fe0
+
+# End Biomes (Desolate Variation)
+END_HIGHLANDS_DESOLATE: 0xe8e8c5
+HANGING_ISLES_DESOLATE: 0xa6a695
+SHATTERED_END_DESOLATE: 0x180b25
+SHATTERED_FOREST_DESOLATE: 0x2f1646
+DARK_END_DESOLATE: 0x1f1f15
+AMETHYST_END_DESOLATE: 0x9966c5
+TAINTED_END_DESOLATE: 0x7d08c5
+STYGIAN_BARRENS_DESOLATE: 0x252135
+CRAGGY_END_DESOLATE: 0x929c95
+CHORUVE_WOODS_DESOLATE: 0x7f5495
+CHORAL_DEADLANDS_DESOLATE: 0x808085
+IVORY_EMPYREAN_DESOLATE: 0xfffff5
+ROSETTE_POOLS_DESOLATE: 0xd36585
+MAUVE_JUNGLE_DESOLATE: 0xa92fe5
+TWISTED_GROVE_DESOLATE: 0x00aba5
+END_WILDS_DESOLATE: 0xFFFF05
+CRIM_THICKET_DESOLATE: 0x9a5965
+VERMILION_WILDS_DESOLATE: 0xb33c36
 
 
 # OLD \/
