--- a/biomes/end/desolate/choruve_woods_desolate.yml
+++ b/biomes/end/desolate/choruve_woods_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:CHORUVE_WOODS
+color: $biomes/colors.yml:CHORUVE_WOODS_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
