--- a/biomes/end/desolate/crim_thicket_desolate.yml
+++ b/biomes/end/desolate/crim_thicket_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:CRIM_THICKET
+color: $biomes/colors.yml:CRIM_THICKET_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
