--- a/biomes/end/desolate/end_highlands_desolate.yml
+++ b/biomes/end/desolate/end_highlands_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:END_HIGHLANDS
+color: $biomes/colors.yml:END_HIGHLANDS_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
