--- a/biomes/end/desolate/end_wilds_desolate.yml
+++ b/biomes/end/desolate/end_wilds_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_OVERHANGS
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:END_WILDS
+color: $biomes/colors.yml:END_WILDS_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
