--- a/biomes/end/desolate/ivory_empyrean_desolate.yml
+++ b/biomes/end/desolate/ivory_empyrean_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:IVORY_EMPYREAN
+color: $biomes/colors.yml:IVORY_EMPYREAN_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
