--- a/biomes/end/desolate/mauve_jungle_desolate.yml
+++ b/biomes/end/desolate/mauve_jungle_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:MAUVE_JUNGLE
+color: $biomes/colors.yml:MAUVE_JUNGLE_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
