--- a/biomes/end/desolate/tainted_end_desolate.yml
+++ b/biomes/end/desolate/tainted_end_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:TAINTED_END
+color: $biomes/colors.yml:TAINTED_END_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
