--- a/biomes/end/desolate/twisted_grove_desolate.yml
+++ b/biomes/end/desolate/twisted_grove_desolate.yml
@@ -4,7 +4,7 @@ extends:
   - BASE_END
   - EQ_DEFAULT
 vanilla: minecraft:end_barrens
-color: $biomes/colors.yml:TWISTED_GROVE
+color: $biomes/colors.yml:TWISTED_GROVE_DESOLATE
 
 tags:
   - ADD_VOID_BIOMES
