Fix legacy marbled landscapes biome color

--- a/biomes/colors.yml
+++ b/biomes/colors.yml
@@ -21,6 +21,7 @@ ROSETTE_POOLS: 0xd3658e
 MAUVE_JUNGLE: 0xa92feb
 TWISTED_GROVE: 0x00aba6
 END_WILDS: 0xFFFF00
+MARBLED_LANDSCAPES: 0xbfab75
 CRIM_THICKET: 0x9a596c
 VERMILION_WILDS: 0xb33c35
 
