--- a/biomes/abstract/mobs/mob_dragon_island.yml
+++ b/biomes/abstract/mobs/mob_dragon_island.yml
@@ -13,25 +13,29 @@ spawning:
       entries:
         - type:
             id: minecraft:bat
-          min-group-size: 8
-          max-group-size: 8
+          group-size:
+            min: 8
+            max: 8
           weight: 10
     - group: MONSTER
       entries:
         - type:
             id: minecraft:enderman
-          min-group-size: 4
-          max-group-size: 4
+          group-size:
+            min: 4
+            max: 4
           weight: 10
         - type:
             id: minecraft:vex
-          min-group-size: 4
-          max-group-size: 4
+          group-size:
+            min: 4
+            max: 4
           weight: 5
     - group: UNDERGROUND_WATER_CREATURE
       entries:
         - type:
             id: minecraft:glow_squid
-          min-group-size: 4
-          max-group-size: 6
+          group-size:
+            min: 4
+            max: 6
           weight: 10
